--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
-    compile 'com.github.delficode:delfiandroidcore:2.0.0'
+    compile 'com.github.delficode:delfiandroidcore:6c6be1bc10'
+
 }
